@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="dataLoadingManager" class="edu.mcw.rgd.dataload.DataLoadingManager">
-        <property name="version" value="Ncbi Gene Pipeline   -- version 2021-03-11" />
+        <property name="version" value="Ncbi Gene Pipeline   -- version 2021-03-25" />
 		<property name="qualityCheck" ref="qualityCheck"/>
 	    <property name="decisionMaker" ref="decisionMaker"/>
 	    <property name="entrezGeneExtractor" ref="entrezGeneExtractor"/>
@@ -77,6 +77,8 @@
                 <entry key="UU_Cfam_GSD_1.0" value="637"/>
 
                 <entry key="SpeTri2.0" value="720"/>
+                <entry key="HiC_Itri_2" value="722"/>
+
                 <entry key="Sscrofa10.2" value="910"/>
                 <entry key="Chlorocebus_sabeus 1.1" value="1311"/>
                 <entry key="Vero_WHO_p1.0" value="1313"/>
@@ -195,6 +197,7 @@
         <constructor-arg>
             <map>
                 <entry key="Reference SpeTri2.0" value="720"/>
+                <entry key="Reference HiC_Itri_2 Primary Assembly" value="722"/>
             </map>
         </constructor-arg>
     </bean>
